# dashboard-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  entire_repo.txt  entire_repo.txt~  hello.cpp  main.cpp
color/: CMakeLists.txt  cmake_install.cmake  color.vcxproj.filters  colors.hpp
color/color/: color.cpp  color.hpp
color/defaults/: defaults.hpp
color/headers/: color.hpp  defaults.hpp
color/src/: color.cpp
components/: CMakeLists.txt  component.hpp  components.hpp
components/circle/: circle.cpp  circle.hpp
components/line/: line.cpp  line.hpp
components/progress_bar/: progress_bar.cpp  progress_bar.hpp
components/rectangle/: rectangle.cpp  rectangle.hpp
components/slider/: slider.cpp  slider.hpp
components/textbox/: textbox.cpp  textbox.hpp
fonts/: CMakeLists.txt
fonts/headers/: fonts.hpp
pages/: CMakeLists.txt  actions.hpp  menu_config.hpp  page.cpp  page.hpp  pages.hpp
pages/colorpicker/: colorpicker.cpp  colorpicker.hpp
pages/component_demo/: component_demo.cpp  component_demo.hpp
pages/pageselection/: pageselection.cpp  pageselection.hpp
pages/time/: timepage.cpp  timepage.hpp
pages/time/components/: CMakeLists.txt  clock.hpp
pages/time/page_components/: CMakeLists.txt  clock.cpp  clock.hpp
point/: CMakeLists.txt  point.hpp
profile/: CMakeLists.txt  defaults.hpp  profile.cpp  profile.hpp  profile.json
scripts/: create_component.py  create_page.py
simulator/: CMakeLists.txt  simulator.hpp
simulator/headers/: parser.hpp  renderer.hpp
simulator/src/: parser.cpp  renderer.cpp
utils/: CMakeLists.txt
utils/inputs/: input.hpp  rotary_encoder.hpp
utils/src/: time.cpp
utils/time/: time.cpp  time.hpp
